联系人界面逻辑

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="main_color">#0065b4</color>
     <color name="dividerColor">#dadada</color>
     <color name="gray">#AAAAAA</color>
+    <color name="textColor">#686868</color>
 </resources>
