--- a/app/src/main/res/layout/recycler_list_item_contact.xml
+++ b/app/src/main/res/layout/recycler_list_item_contact.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -10,7 +9,7 @@
             android:id="@+id/pinyin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/divider_color"
+            android:background="@color/dividerColor"
             android:paddingBottom="2dp"
             android:paddingLeft="10dp"
             android:paddingTop="2dp"
@@ -29,7 +28,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="12dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/default_avatar" />
+                android:src="@mipmap/default_avatar" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -55,7 +54,7 @@
                 <TextView
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:background="@drawable/checkbox_gray_on"
+                    android:background="@mipmap/checkbox_gray_on"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="10dp"
                     android:layout_centerVertical="true"
@@ -73,4 +72,3 @@
             android:background="@color/dividerColor" />
 
     </LinearLayout>
-</layout>
